symbol table phase